        - a check that detects data names that deviate from
          the IUCr naming convention.
        - a check that detects situations when the type dimension
          attribute is used with incompatible type containers.
        - a check that detects situations when a measurand item
          and the associated SU data item have different units
          of measurement.
  * Changed:
    - COD::CIF::DDL::DDLm::Validate:
        - updated the extract_application_scope() subroutine to properly
          handle the _dictionary_valid.scope and _dictionary_valid.option
          data items.
  * Fixed:
    - COD::SUsage:
        - a typo in the output of the options() subroutine.
    - cif_ddlm_dic_check:
        - a typo in an output message.

cod-tools (3.2.0)

  * Added:
    - the 'cif_automorphism' script.
    - cif_cod_check:
      - validation of SHELX checksums.
      - the '--no-max-year-temperature-factors-optional' option.
      - the '--check-adp-presence', '--max-year-adp-presence-is-optional'
        and '--no-max-year-adp-presence-is-optional' options as replacements
        of the deprecated '--check-temperature-factors',
        '--max-year-temperature-factors-optional' and
        '--no-max-year-adp-presence-is-optional' options respectively.
    - cif_fillcell:
      - the '--output-cod-molecule-data-items' option.
    - cif_hkl_check:
      - validation of SHELX checksums.
    - cif_sort_atoms:
      - the '--record-original-order', '--order-child-loops' options;
      - support for ordering according to values of '_atom_type_*' CIF
        loop.
    - cif_CODify:
      - an error message regarding the mandatory input CIF file.
    - COD::AtomProperties assembler:
      - covalent radii from Meng and Lewis (1991).
    - COD::CIF::Data:
      - the calculate_shelx_checksum() subroutine.
    - COD::CIF::Data::CODFlags:
      - the has_attached_hydrogens() subroutine.
    - COD::CIF::Data::Check:
      - the check_shelx_checksums() subroutine;