@@ -13,6 +13,11 @@ cod-tools (unreleased)
         - a check that detects situations when a measurand item
           and the associated SU data item have different units
           of measurement.
+     - COD::CIF::DDL::DDLm:
+        - the 'resolve_content_types' option to the build_ddlm_dic()
+          subroutine.
+        - the 'resolve_implied_type' and 'resolve_byreference_type'
+          options to the get_type_contents() subroutines.
   * Changed:
     - COD::CIF::DDL::DDLm::Validate:
         - updated the extract_application_scope() subroutine to properly
